--- a/Cuty_Cat/src/app/cat-face/cat-face.component.scss
+++ b/Cuty_Cat/src/app/cat-face/cat-face.component.scss
@@ -1,6 +1,43 @@
 .cuty-cat-card {
-    width: 35%;
-    img {
-      width: 100%;
+  box-sizing: border-box;
+  width: 35%;
+  margin: 20px auto;
+  padding: 10px 30px;
+  box-shadow: lightgray 4px 4px 20px;
+  img {
+    width: 100%;
+    /*height: 500px;*/
+  }
+  h2 {
+    /*margin-bottom: 0;*/
+  }
+  p {
+    font-weight: 300;
+    font-size: 16px;
+    width: 50%;
+    text-align: justify;
+  }
+  button:hover {
+    background-color: #EEE;
+  }
+  img {
+    width: 30%;
+    margin-left: 1px;
+  }
+  .container {
+    display: flex;
+    margin-bottom: 15px;
+  }
+}
+
+.snapped {
+  background-color: rgba(lightgreen, 0.4);
+  color: darkgreen;
+  button {
+    box-shadow: lightgreen 3px 3px 7px;
+    color: darkgreen;
+    &:active {
+      box-shadow: lightgreen 0 0 5px;
     }
   }
+}
